--- a/services/Image-Keyword Match.ipynb
+++ b/services/Image-Keyword Match.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {
     "scrolled": false
    },
@@ -13,7 +13,7 @@
        "'shutterstock_71236504.jpg'"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,17 +104,17 @@
     }
    ],
    "source": [
-    "dictOfimg = {}\n",
-    "metadata = pyexiv2.ImageMetadata('..//..//StoryCare images/shutterstock_71236504.jpg')\n",
-    "metadata.read()\n",
-    "print(metadata.iptc_keys)\n",
-    "print(metadata['Xmp.MicrosoftPhoto.LastKeywordXMP'].raw_value)\n",
-    "if('Iptc.Application2.Keywords' in metadata.iptc_keys):\n",
-    "    dictOfimg[file] = metadata['Iptc.Application2.Keywords'].raw_value\n",
-    "else:\n",
-    "    dictOfimg[file] = []\n",
-    "    dictOfimg[file] = list(map(stemmer.stem, dictOfimg[file]))\n",
-    "print(dictOfimg)"
+    "# dictOfimg = {}\n",
+    "# metadata = pyexiv2.ImageMetadata('..//..//StoryCare images/shutterstock_71236504.jpg')\n",
+    "# metadata.read()\n",
+    "# print(metadata.iptc_keys)\n",
+    "# print(metadata['Xmp.MicrosoftPhoto.LastKeywordXMP'].raw_value)\n",
+    "# if('Iptc.Application2.Keywords' in metadata.iptc_keys):\n",
+    "#     dictOfimg[file] = metadata['Iptc.Application2.Keywords'].raw_value\n",
+    "# else:\n",
+    "#     dictOfimg[file] = []\n",
+    "#     dictOfimg[file] = list(map(stemmer.stem, dictOfimg[file]))\n",
+    "# print(dictOfimg)"
    ]
   },
   {
@@ -134,8 +134,8 @@
     }
    ],
    "source": [
-    "wns = WordNetSimilarity()\n",
-    "wns.word_similarity('relax', 'relax', 'wpath') # 0.449327301063"
+    "# wns = WordNetSimilarity()\n",
+    "# wns.word_similarity('relax', 'relax', 'wpath') # 0.449327301063"
    ]
   },
   {
@@ -152,9 +152,9 @@
     }
    ],
    "source": [
-    "from nltk.corpus import wordnet\n",
-    "syns = wordnet.synsets('rest')\n",
-    "print(syns[0].lemmas())"
+    "# from nltk.corpus import wordnet\n",
+    "# syns = wordnet.synsets('rest')\n",
+    "# print(syns[0].lemmas())"
    ]
   },
   {
@@ -171,14 +171,14 @@
     }
    ],
    "source": [
-    " for syn in wordnet.synsets(\"rest\"):\n",
-    "    synonyms = []\n",
-    "    w1 = syn\n",
-    "    w2 \n",
-    "    w1.wup_similarity(w2)\n",
-    "    for l in syn.lemmas():\n",
-    "        synonyms.append(l.name())\n",
-    "print(synonyms)"
+    "#  for syn in wordnet.synsets(\"rest\"):\n",
+    "#     synonyms = []\n",
+    "#     w1 = syn\n",
+    "#     w2 \n",
+    "#     w1.wup_similarity(w2)\n",
+    "#     for l in syn.lemmas():\n",
+    "#         synonyms.append(l.name())\n",
+    "# print(synonyms)"
    ]
   },
   {
@@ -196,11 +196,11 @@
     }
    ],
    "source": [
-    "w1 = wordnet.synset('ache.v.01') # v here denotes the tag verb\n",
-    "w2 = wordnet.synset('head.v.01')\n",
-    "print(w1.wup_similarity(w2))\n",
+    "# w1 = wordnet.synset('ache.v.01') # v here denotes the tag verb\n",
+    "# w2 = wordnet.synset('head.v.01')\n",
+    "# print(w1.wup_similarity(w2))\n",
     "\n",
-    "print(wordnet.synsets('rest'))"
+    "# print(wordnet.synsets('rest'))"
    ]
   },
   {
@@ -217,20 +217,20 @@
     }
    ],
    "source": [
-    "from itertools import product\n",
-    "import numpy as np\n",
-    "allsyns1 = set(ss for word in ['understand','ache'] for ss in wordnet.synsets(word))\n",
-    "allsyns2 = set(ss for word in ['understand','ache'] for ss in wordnet.synsets(word))\n",
-    "best = 0.0\n",
-    "word = allsyns1.pop()\n",
-    "for word in allsyns1:\n",
-    "    max = 0\n",
-    "    for s1 in allsyns2:\n",
-    "        similarity = wordnet.wup_similarity(word, s1)\n",
-    "        if(similarity and similarity>max):\n",
-    "            max = similarity\n",
-    "    best += max\n",
-    "print(best/(len(list(allsyns1)) + len(list(allsyns2))))"
+    "# from itertools import product\n",
+    "# import numpy as np\n",
+    "# allsyns1 = set(ss for word in ['understand','ache'] for ss in wordnet.synsets(word))\n",
+    "# allsyns2 = set(ss for word in ['understand','ache'] for ss in wordnet.synsets(word))\n",
+    "# best = 0.0\n",
+    "# word = allsyns1.pop()\n",
+    "# for word in allsyns1:\n",
+    "#     max = 0\n",
+    "#     for s1 in allsyns2:\n",
+    "#         similarity = wordnet.wup_similarity(word, s1)\n",
+    "#         if(similarity and similarity>max):\n",
+    "#             max = similarity\n",
+    "#     best += max\n",
+    "# print(best/(len(list(allsyns1)) + len(list(allsyns2))))"
    ]
   },
   {
@@ -247,22 +247,22 @@
     }
    ],
    "source": [
-    "from nltk.corpus import wordnet\n",
+    "# from nltk.corpus import wordnet\n",
     "\n",
-    "list1 = ['head', 'ache']\n",
-    "list2 = ['head', 'ache'] \n",
-    "list11 = []\n",
+    "# list1 = ['head', 'ache']\n",
+    "# list2 = ['head', 'ache'] \n",
+    "# list11 = []\n",
     "\n",
-    "for word1 in list1:\n",
-    "    for word2 in list2:\n",
-    "        wordFromList1 = wordnet.synsets(word1)\n",
-    "        wordFromList2 = wordnet.synsets(word2)\n",
-    "        if wordFromList1 and wordFromList2: #Thanks to @alexis' note\n",
-    "            s = wordFromList1[0].wup_similarity(wordFromList2[0])\n",
-    "            if(s):\n",
-    "                list11.append(s)\n",
+    "# for word1 in list1:\n",
+    "#     for word2 in list2:\n",
+    "#         wordFromList1 = wordnet.synsets(word1)\n",
+    "#         wordFromList2 = wordnet.synsets(word2)\n",
+    "#         if wordFromList1 and wordFromList2: #Thanks to @alexis' note\n",
+    "#             s = wordFromList1[0].wup_similarity(wordFromList2[0])\n",
+    "#             if(s):\n",
+    "#                 list11.append(s)\n",
     "\n",
-    "print(np.mean(list11))"
+    "# print(np.mean(list11))"
    ]
   },
   {
