--- a/services/Image-Keyword Match.ipynb
+++ b/services/Image-Keyword Match.ipynb
@@ -2,21 +2,75 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "No module named pyexiv2",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-6c54e665c6a2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpyexiv2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnltk\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mnltk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msnowball\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSnowballStemmer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msematch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msemantic\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msimilarity\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mWordNetSimilarity\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: No module named pyexiv2"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shutterstock_572854942.jpg\n",
+      "shutterstock_335916854.jpg\n",
+      "shutterstock_572894623.jpg\n",
+      "shutterstock_540997561.jpg\n",
+      "shutterstock_553662235.jpg\n",
+      "shutterstock_596085695.jpg\n",
+      "shutterstock_88271590.jpg\n",
+      "shutterstock_102840245.jpg\n",
+      "shutterstock_759846457.jpg\n",
+      "shutterstock_279908831.jpg\n",
+      "shutterstock_559105132.jpg\n",
+      "shutterstock_113477533.jpg\n",
+      "shutterstock_584573320.jpg\n",
+      "shutterstock_77409244.jpg\n",
+      "shutterstock_196449920.jpg\n",
+      "shutterstock_79294636.jpg\n",
+      "shutterstock_302044346.jpg\n",
+      "shutterstock_667699744.jpg\n",
+      "shutterstock_129433802.jpg\n",
+      "shutterstock_691644811.jpg\n",
+      "shutterstock_256491202.jpg\n",
+      "shutterstock_86830399.jpg\n",
+      "shutterstock_245873251.jpg\n",
+      "shutterstock_538629076.jpg\n",
+      "shutterstock_306650666.jpg\n",
+      "shutterstock_709643614.jpg\n",
+      "shutterstock_121813225.jpg\n",
+      "shutterstock_615860714.jpg\n",
+      "shutterstock_732175282.jpg\n",
+      "shutterstock_540635956.jpg\n",
+      "shutterstock_57700177.jpg\n",
+      "shutterstock_46714294.jpg\n",
+      "shutterstock_115219357.jpg\n",
+      "shutterstock_626866760.jpg\n",
+      "shutterstock_127206167.jpg\n",
+      "shutterstock_281147240.jpg\n",
+      "shutterstock_359505965.jpg\n",
+      "shutterstock_77003545.jpg\n",
+      "shutterstock_683325046.jpg\n",
+      "shutterstock_537358684.jpg\n",
+      "shutterstock_397865059.jpg\n",
+      "shutterstock_262732652.jpg\n",
+      "shutterstock_516507907.jpg\n",
+      "shutterstock_745443628.jpg\n",
+      "shutterstock_742700083.jpg\n",
+      "shutterstock_327930536.jpg\n",
+      "shutterstock_73707667.jpg\n",
+      "shutterstock_732055678.jpg\n",
+      "shutterstock_504203647.jpg\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'shutterstock_79294636.jpg'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -32,7 +86,7 @@
     "    for file in os.listdir(dir):\n",
     "        if file[0] == \".\":\n",
     "            continue\n",
-    "        metadata = pyexiv2.ImageMetadata(dir + '//' + file)\n",
+    "        metadata = pyexiv2.metadata.ImageMetadata(dir + '/' + file)\n",
     "        metadata.read()\n",
     "        if('Iptc.Application2.Keywords' in metadata.iptc_keys):\n",
     "            dictOfimg[file] = metadata['Iptc.Application2.Keywords'].raw_value\n",
@@ -44,7 +98,7 @@
     "    return dictOfimg\n",
     "\n",
     "def getSimilarImage():\n",
-    "    images = getDictOfKeywords('..//..//StoryCare images')\n",
+    "    images = getDictOfKeywords('..//StoryCareImages')\n",
     "    maxSim = 0\n",
     "    imageSim = ''\n",
     "    for image in images.keys():\n",
@@ -59,7 +113,7 @@
     "    return imageSim\n",
     "    \n",
     "def getSimilarImage1():\n",
-    "    images = getDictOfKeywords('..//..//StoryCare images')\n",
+    "    images = getDictOfKeywords('../StoryCareImages')\n",
     "    maxSim = 0\n",
     "    imageSim = ''\n",
     "    wns = WordNetSimilarity()\n",
@@ -279,18 +333,6 @@
    "display_name": "Python 2",
    "language": "python",
    "name": "python2"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
   }
  },
  "nbformat": 4,
