Image Matching working

--- a/services/iPynb_scripts/Image-Keyword Match.ipynb
+++ b/services/iPynb_scripts/Image-Keyword Match.ipynb
@@ -2,20 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 60,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'shutterstock_71236504.jpg'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-02-23 16:36:55,189 : INFO : loading Word2Vec object from ../trained_model/model\n",
+      "2018-02-23 16:36:58,396 : INFO : loading vocabulary recursively from ../trained_model/model.vocabulary.* with mmap=None\n",
+      "2018-02-23 16:36:58,401 : INFO : loading wv recursively from ../trained_model/model.wv.* with mmap=None\n",
+      "2018-02-23 16:36:58,405 : INFO : loading vectors from ../trained_model/model.wv.vectors.npy with mmap=None\n",
+      "2018-02-23 16:36:58,605 : INFO : setting ignored attribute vectors_norm to None\n",
+      "2018-02-23 16:36:58,606 : INFO : loading trainables recursively from ../trained_model/model.trainables.* with mmap=None\n",
+      "2018-02-23 16:36:58,607 : INFO : loading syn1neg from ../trained_model/model.trainables.syn1neg.npy with mmap=None\n",
+      "2018-02-23 16:36:58,962 : INFO : setting ignored attribute cum_table to None\n",
+      "2018-02-23 16:36:58,962 : INFO : loaded ../trained_model/model\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel_launcher.py:43: DeprecationWarning: Call to deprecated `similarity` (Method will be removed in 4.0.0, use self.wv.similarity() instead).\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['addiction', 'advice', 'announcement message', 'care', 'clinic', 'colour', 'communication', 'concepts', 'consultant', 'danger', 'doctor', 'expertise', 'forbidden', 'general practitioner', 'healthcare and medicine', 'healthcare worker', 'healthy lifestyle', 'holding', 'horizontal', 'hospital', 'isolated', 'isolated on white', 'lab coat', 'male', 'man', 'medical occupation', 'medical test', 'medicine', 'message', 'no smoking sign', 'occupation', 'people', 'photography', 'professional occupation', 'showing', 'sign', 'smoking', 'smoking issues', 'social issues', 'stethoscope', 'stop', 'teaching', 'uniform'] 1.0\n"
+     ]
     }
    ],
    "source": [
@@ -24,8 +37,12 @@
     "import os\n",
     "from nltk.stem.snowball import SnowballStemmer\n",
     "from sematch.semantic.similarity import WordNetSimilarity\n",
+    "import gensim, logging, os\n",
+    "import PIL.Image as Image\n",
+    "\n",
     "stemmer = SnowballStemmer(\"english\")\n",
-    "keywords =list(map(stemmer.stem, ['ache','understand']))\n",
+    "# keywords =list(map(stemmer.stem, ['ache','understand']))\n",
+    "keywords=['smoking']\n",
     "def getDictOfKeywords(dir):\n",
     "    dictOfimg = {}\n",
     "    for file in os.listdir(dir):\n",
@@ -39,54 +56,112 @@
     "            dictOfimg[file] = metadata['Xmp.MicrosoftPhoto.LastKeywordXMP'].raw_value\n",
     "        else:\n",
     "            dictOfimg[file] = []\n",
-    "        dictOfimg[file] = list(map(stemmer.stem, dictOfimg[file]))\n",
+    "#         dictOfimg[file] = list(map(stemmer.stem, dictOfimg[file]))\n",
     "    return dictOfimg\n",
     "\n",
-    "def getSimilarImage():\n",
-    "    images = getDictOfKeywords('..//..//StoryCare images')\n",
-    "    maxSim = 0\n",
-    "    imageSim = ''\n",
-    "    for image in images.keys():\n",
-    "        count = 0\n",
-    "        for k in keywords:\n",
-    "            if k in images[image]:\n",
-    "                count+=1\n",
-    "        similarity = count/float(len(keywords))\n",
-    "        if(similarity > maxSim):\n",
-    "            similarity = maxSim\n",
-    "            imageSim = image\n",
-    "    return imageSim\n",
     "    \n",
     "def getSimilarImage1():\n",
-    "    images = getDictOfKeywords('..//..//StoryCare images')\n",
+    "    images = getDictOfKeywords('..//..//StoryCareImages')\n",
     "    maxSim = 0\n",
     "    imageSim = ''\n",
     "    wns = WordNetSimilarity()\n",
+    "    model = gensim.models.Word2Vec.load('../trained_model/model')\n",
+    "\n",
     "    for image in images.keys():\n",
     "        avg = 0\n",
-    "        print(images[image])\n",
-    "        for word in images[image]:\n",
-    "            max = 0\n",
-    "            for k in keywords:\n",
-    "                print(k,word)\n",
-    "                match = wns.word_similarity(k, word, 'li')\n",
-    "                print(match)\n",
-    "                if(max<match):\n",
-    "                    max = match\n",
-    "            avg += max\n",
-    "            print(avg)\n",
-    "        similarity = 0\n",
-    "        if(len(images[image]) > 0):\n",
-    "            similarity = avg/float(len(images[image]))\n",
+    "#         print(images[image])\n",
+    "        for k in keywords:\n",
+    "            matches=[]\n",
+    "            for word in images[image]:\n",
+    "                if ' ' not in word and k in model.wv and word in model.wv:\n",
+    "                    matches.append(model.similarity(k.lower(), word.lower()))\n",
+    "            avg += max(matches) if matches else 0\n",
+    "        similarity = avg/float(len(keywords))\n",
     "        if(similarity > maxSim):\n",
-    "            similarity = maxSim\n",
+    "            maxSim = similarity\n",
     "            imageSim = image\n",
+    "    print images[imageSim],maxSim\n",
     "    return imageSim\n",
     "\n",
-    "getSimilarImage()\n",
+    "im = Image.open(\"../../StoryCareImages/\" + getSimilarImage1())\n",
+    "im.show()\n",
     "\n",
     "#getSimilarImage1()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'Chlorthalidone' in model.wv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-02-23 15:20:34,068 : INFO : loading Word2Vec object from trained_model\n",
+      "2018-02-23 15:20:38,151 : INFO : loading vocabulary recursively from trained_model.vocabulary.* with mmap=None\n",
+      "2018-02-23 15:20:38,152 : INFO : loading wv recursively from trained_model.wv.* with mmap=None\n",
+      "2018-02-23 15:20:38,153 : INFO : loading vectors from trained_model.wv.vectors.npy with mmap=None\n",
+      "2018-02-23 15:20:38,782 : INFO : setting ignored attribute vectors_norm to None\n",
+      "2018-02-23 15:20:38,785 : INFO : loading trainables recursively from trained_model.trainables.* with mmap=None\n",
+      "2018-02-23 15:20:38,786 : INFO : loading syn1neg from trained_model.trainables.syn1neg.npy with mmap=None\n",
+      "2018-02-23 15:20:39,692 : INFO : setting ignored attribute cum_table to None\n",
+      "2018-02-23 15:20:39,700 : INFO : loaded trained_model\n"
+     ]
+    }
+   ],
+   "source": [
+    "import gensim, logging, os\n",
+    "\n",
+    "logging.basicConfig(format='%(asctime)s : %(levelname)s : %(message)s', level=logging.INFO)\n",
+    "model = gensim.models.Word2Vec.load('trained_model')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel_launcher.py:1: DeprecationWarning: Call to deprecated `similarity` (Method will be removed in 4.0.0, use self.wv.similarity() instead).\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.06367981084439678"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -275,9 +350,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -289,7 +364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
